# mille-bornes

./: .coverage  .gitignore  main.py  pyproject.toml  readme.md
assets/: style.tcss
run/: format
src/defs/: card_names.py  card_types.py  cards.py  constants.py  game.py  player.py  ui.py
src/domain/: cards.py  game.py  player.py  tableau.py
src/domain/models/: game.py  human_player.py  player.py  player_tableau.py
src/models/: computer_player.py  event_log.py  game.py  player.py  tableau.py
src/ui/: card_description_container.py  event_log_container.py  game_container.py  hand_container.py  player_container.py  ui.py
tests/domain/: test_cards.py  test_computer_player.py  test_game.py  test_human_player.py  test_player.py  test_tableau.py
tests/models/: test_computer_player.py  test_game.py  test_player.py
tests/utils/: assertions.py  game_mocks.py  mocks.py
