[tool.poetry]
name = "milles_bornes"
version = "0.1.0"
description = ""
authors = ["Eric Harm <ericharm@gmail.com>"]
readme = "readme.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
disallow_untyped_defs = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
