[project]
name = "milles_bornes"
version = "0.1.0"
description = ""
authors = ["Eric Harm <ericharm@gmail.com>"]
readme = "readme.md"
requires-python = ">=3.10"
packages = [{include = "src"}]
dependencies = [
    "attrs>=23.1.0",
    "textual>=2.1.2",
]


[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.black]
line-length = 100

[tool.mypy]
disallow_untyped_defs = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
